src/snapshots/bgm__tui__tests__browser.snap
---
source: src/tui.rs
expression: snapshot
---
┌ bgm — 1 wallpaper — filter v1 ───────────────────────────────────────────────────────────────────────────────────────┐
│Background Manager  native catalog • collections • wpaperd                                         Ready — ? for help │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Results ──────────────────────────────┐┌ Preview ─────────────────────────────────────┐┌ Metadata • palette • AI esti┐
│▸ ★ mountain.jpg  1920×1080            ││                 [mock image]                 ││/wallpapers/mountain.jpg     │
│                                       ││                                              ││1920 × 1080   ratio 16:9     │
│                                       ││                                              ││landscape                    │
│                                       ││                                              ││dominant #204080 blue   dark │
│                                       ││                                              ││luminance 0.300  saturation  │
│                                       ││                                              ││0.600  contrast 0.200        │
│                                       ││                                              ││                             │
│                                       ││                                              ││Palette                      │
│                                       ││                                              ││                             │
│                                       ││                                              ││AI estimates                 │
│                                       ││                                              ││not analyzed                 │
│                                       ││                                              ││                             │
│                                       ││                                              ││tags: desktop                │
│                                       ││                                              ││                             │
│                                       ││                                              ││                             │
│                                       ││                                              ││                             │
│                                       ││                                              ││                             │
│                                       ││                                              ││                             │
│                                       ││                                              ││                             │
│                                       ││                                              ││                             │
│                                       ││                                              ││                             │
│                                       ││                                              ││                             │
│                                       ││                                              ││                             │
│                                       ││                                              ││                             │
│                                       ││                                              ││                             │
└───────────────────────────────────────┘└──────────────────────────────────────────────┘└─────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
↑/↓ nav  / filter  r reset  a add  s scan  : cmd  f fave  t tag  c collections  m move  w bind  o open  ? help  q quit
