src/snapshots/bgm__tui__tests__collections_manager_populated.snap
---
source: src/tui.rs
expression: screen
---


   ┌ Collections manager ─────────────────────────────────────────────────────────────────────────────────┐
   │┌ Saved collections ───────────────┐┌ Details — readable ────────────────────────────────────────────┐│
   ││      All wallpapers              ││Warm widescreen                                                 ││
   ││▸ ● W Warm widescreen             ││Created: 2023-11-14 22:13:20 UTC                                ││
   ││                                  ││Updated: 2023-11-14 23:14:21 UTC                                ││
   ││                                  ││Current browser filter: exact match                             ││
   ││                                  ││wpaperd displays: DP-1                                          ││
   ││                                  ││                                                                ││
   ││                                  ││Filter facets                                                   ││
   ││                                  ││Minimum width: 2560 px                                          ││
   ││                                  ││Orientations (any): landscape                                   ││
   ││                                  ││Aspect ratios (any): 1.778, 2.333                               ││
   ││                                  ││Aspect tolerance: 5%                                            ││
   ││                                  ││Light/dark (any): dark                                          ││
   ││                                  ││Palette colour (any): #D08040 within Oklab distance 0.1         ││
   ││                                  ││Tags (any): desktop, warm                                       ││
   ││                                  ││Favourite: yes                                                  ││
   ││                                  ││                                                                ││
   ││                                  ││                                                                ││
   ││                                  ││                                                                ││
   │└──────────────────────────────────┘└────────────────────────────────────────────────────────────────┘│
   │Enter load • s save new • u update • d delete • v readable/JSON                                       │
   │Tab or ←/→ switches pane • ↑/↓, Page Up/Down, Home/End navigate                                       │
   │Esc closes or cancels a prompt first • c closes                                                       │
   │● current filter • W active wpaperd binding                                                           │
   └──────────────────────────────────────────────────────────────────────────────────────────────────────┘
